k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: water-plant
  labels:
    name: water-plant
    environment: production
